parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__if-3.snap
---
source: parser/src/parser/parser.rs
description: "if a:\n        a = 1\nif a:\n        b = 1\n\n"
---
Module {
    node: Node {
        start: 0,
        end: 41,
    },
    body: [
        IfStatement(
            If {
                node: Node {
                    start: 3,
                    end: 20,
                },
                test: Name(
                    Name {
                        node: Node {
                            start: 3,
                            end: 4,
                        },
                        id: "a",
                    },
                ),
                body: [
                    AssignStatement(
                        Assign {
                            node: Node {
                                start: 14,
                                end: 19,
                            },
                            targets: [
                                Name(
                                    Name {
                                        node: Node {
                                            start: 14,
                                            end: 15,
                                        },
                                        id: "a",
                                    },
                                ),
                            ],
                            value: Constant(
                                Constant {
                                    node: Node {
                                        start: 18,
                                        end: 19,
                                    },
                                    value: Int(
                                        "1",
                                    ),
                                },
                            ),
                        },
                    ),
                ],
                orelse: [],
            },
        ),
        IfStatement(
            If {
                node: Node {
                    start: 23,
                    end: 41,
                },
                test: Name(
                    Name {
                        node: Node {
                            start: 23,
                            end: 24,
                        },
                        id: "a",
                    },
                ),
                body: [
                    AssignStatement(
                        Assign {
                            node: Node {
                                start: 34,
                                end: 39,
                            },
                            targets: [
                                Name(
                                    Name {
                                        node: Node {
                                            start: 34,
                                            end: 35,
                                        },
                                        id: "b",
                                    },
                                ),
                            ],
                            value: Constant(
                                Constant {
                                    node: Node {
                                        start: 38,
                                        end: 39,
                                    },
                                    value: Int(
                                        "1",
                                    ),
                                },
                            ),
                        },
                    ),
                ],
                orelse: [],
            },
        ),
    ],
}
