parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@class.py-19.snap
---
source: parser/src/parser/parser.rs
description: "class a[T: U, V: W, **X]: pass"
input_file: parser/test_data/inputs/one_liners/class.py
---
Module {
    node: Node {
        start: 0,
        end: 30,
    },
    body: [
        ClassDef(
            ClassDef {
                node: Node {
                    start: 0,
                    end: 30,
                },
                name: "a",
                bases: [],
                keywords: [],
                body: [
                    Pass(
                        Pass {
                            node: Node {
                                start: 26,
                                end: 30,
                            },
                        },
                    ),
                ],
                decorator_list: [],
                type_params: [
                    TypeVar(
                        TypeVar {
                            node: Node {
                                start: 8,
                                end: 12,
                            },
                            name: "T",
                            bound: Some(
                                Name(
                                    Name {
                                        node: Node {
                                            start: 11,
                                            end: 12,
                                        },
                                        id: "U",
                                    },
                                ),
                            ),
                        },
                    ),
                    TypeVar(
                        TypeVar {
                            node: Node {
                                start: 14,
                                end: 18,
                            },
                            name: "V",
                            bound: Some(
                                Name(
                                    Name {
                                        node: Node {
                                            start: 17,
                                            end: 18,
                                        },
                                        id: "W",
                                    },
                                ),
                            ),
                        },
                    ),
                    ParamSpec(
                        ParamSpec {
                            node: Node {
                                start: 20,
                                end: 23,
                            },
                            name: "X",
                        },
                    ),
                ],
            },
        ),
    ],
}
